--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Erwin Lo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
   }
 }
